--- a/application/modules/front/views/scripts/partial/menu.phtml
+++ b/application/modules/front/views/scripts/partial/menu.phtml
@@ -8,13 +8,13 @@ $items['home'] = array(
 /** Liste des chambres d'hôtes */
 $items['chambres'] = array(
     'controller' => 'products',
-    'action'     => 'chambres-list',
+    'action'     => 'guesthouse-room-list',
     'label'      => _('GLOBAL_MENU_CHAMBRES')
 );
 /** Liste des logements du gite */
 $items['gite'] = array(
     'controller' => 'products',
-    'action'     => 'gite-list',
+    'action'     => 'chalet-room-list',
     'label'      => _('GLOBAL_MENU_GITE')
 );
 /** Liste des actualités */
