--- a/application/modules/back/views/scripts/partial/header.phtml
+++ b/application/modules/back/views/scripts/partial/header.phtml
@@ -1,5 +1,5 @@
 <h1>
     <a href="<?php echo $this->baseUrl(); ?>">
-        <?php echo _('GLOBAL_HEADER_TITLE'); ?>
+        <?= _('GLOBAL_HEADER_TITLE'); ?>
     </a>
 </h1>
