--- a/application/modules/front/views/scripts/index/index.phtml
+++ b/application/modules/front/views/scripts/index/index.phtml
@@ -1,5 +1,36 @@
 <?php
 $this->headTitle('Home | ');
+$this->headLink()->appendStylesheet($this->buildDesignUrl('index/css/index.css'));
 ?>
+<div class="presentation">
+    <h2>
+        <?= _('HOME_TITRE') ?>
+    </h2>
 
-Vue
+    <p><?= _('HOME_PARAGRAPHE1') ?></p>
+
+    <p><?= _('HOME_PARAGRAPHE2') ?></p>
+
+    <p><?= _('HOME_PARAGRAPHE3') ?></p>
+
+    <p><?= _('HOME_PARAGRAPHE4') ?></p>
+
+    <p><?= _('HOME_PARAGRAPHE5') ?></p>
+
+    <p class="signature"><?= _('HOME_SIGNATURE') ?></p>
+</div>
+<div class="news">
+    <h3>
+        <?= _('HOME_NEWS_TITRE') ?>
+    </h3>
+    <p class="illustrate">
+        <img src="<?= $this->baseUrl()?>files/upload/news/default.jpg">
+    </p>
+    <h4>
+        <?= _('HOME_NEWS_TITRE_NEWS_TITRE') ?>
+    </h4>
+
+    <p><?= _('HOME_NEWS_TITRE_NEWS_CONTENU') ?></p>
+
+    <p class="more"><a href="#"><?= _('HOME_NEWS_TITRE_NEWS_MORE') ?></a></p>
+</div>
