--- a/application/modules/front/layouts/scripts/layout.phtml
+++ b/application/modules/front/layouts/scripts/layout.phtml
@@ -8,7 +8,7 @@ $doctype = new Zend_View_Helper_Doctype();
 $doctype->setDoctype('HTML5');
 
 /** Titre du site */
-$this->headTitle('Luchon Location Vacances');
+$this->headTitle(_('GLOBAL_HEADER_TITLE'));
 
 /** Metas tags */
 $this->headMeta()->setCharset(Llv_Config::getInstance()->project->charset);
