Commit avant possibilité coupure

--- a/application/modules/back/views/scripts/index/carrousel-list.phtml
+++ b/application/modules/back/views/scripts/index/carrousel-list.phtml
@@ -1,6 +1,7 @@
 <?php
 $this->headTitle('Carrousel | ');
 $this->headLink()->appendStylesheet($this->buildDesignUrl('carrousel/css/list.css'));
+$liste = $this->list;
 ?>
 
 <div class="page page_cms">
@@ -14,4 +15,60 @@ $this->headLink()->appendStylesheet($this->buildDesignUrl('carrousel/css/list.cs
         </a>
     </p>
 
+    <?php if (count($liste) > 0): ?>
+    <table class="list">
+        <thead>
+        <tr>
+            <th><?= _('HOME_CARROUSEL_LIST_ID')?></th>
+            <th><?= _('GLOBAL_ADMIN_LIST_APERCU')?></th>
+            <th><?= _('HOME_CARROUSEL_LIST_ORIGINALFILENAME')?></th>
+            <th><?= _('HOME_CARROUSEL_LIST_TYPE')?></th>
+            <th><?= _('HOME_CARROUSEL_LIST_ONLINE')?></th>
+            <th><?= _('GLOBAL_ADMIN_LIST_DATE_AJOUT')?></th>
+            <th><?= _('GLOBAL_ADMIN_LIST_DATE_MODIFICATION')?></th>
+            <th><?= _('GLOBAL_ADMIN_LIST_DATE_SUPPRESSION')?></th>
+            <th class="actions"><?= _('GLOBAL_ADMIN_LIST_ACTIONS')?></th>
+        </tr>
+        </thead>
+        <tbody>
+            <?php foreach ($liste as $ligne): ?>
+        <tr>
+            <td><?= $ligne->id; ?></td>
+            <td><?= $this->displayImage($ligne->filename, Llv_Constant_File_Category::CARROUSEL); ?><img src=""/></td>
+            <td><?= $ligne->originalFilename; ?></td>
+            <td><?= $ligne->mimeType; ?></td>
+            <td><?= $ligne->online ? _('GLOBAL_OUI') : _('GLOBAL_NON'); ?></td>
+            <td><?= $this->dateFormat($ligne->dateAdd); ?></td>
+            <td><?= $this->dateFormat($ligne->dateUpdate); ?></td>
+            <td><?= !is_null($ligne->dateDelete) ? $this->dateFormat($ligne->dateDelete) : _('GLOBAL_AUCUNE') ; ?></td>
+            <td class="actions">
+                <a href="<?= $this->baseUrl(); ?>index/carrousel-update/make/delete/id/<?= $ligne->id; ?>"
+                   title="<?= _('GLOBAL_ADMIN_DELETE') ?>">
+                    <?= _('GLOBAL_ADMIN_DELETE') ?>
+                </a>
+                <a href="<?= $this->baseUrl(); ?>index/carrousel-update/make/up/id/<?= $ligne->id; ?>"
+                   title="<?= _('GLOBAL_ADMIN_UP') ?>">
+                    <?= _('GLOBAL_ADMIN_UP') ?>
+                </a>
+                <a href="<?= $this->baseUrl(); ?>index/carrousel-update/make/down/id/<?= $ligne->id; ?>"
+                   title="<?= _('GLOBAL_ADMIN_DOWN') ?>">
+                    <?= _('GLOBAL_ADMIN_DOWN') ?>
+                </a>
+                <?php if ($ligne->online): ?>
+                <a href="<?= $this->baseUrl(); ?>index/carrousel-update/make/offline/id/<?= $ligne->id; ?>"
+                   title="<?= _('GLOBAL_ADMIN_OFFLINE') ?>">
+                    <?= _('GLOBAL_ADMIN_OFFLINE') ?>
+                </a>
+                <?php else: ?>
+                <a href="<?= $this->baseUrl(); ?>index/carrousel-update/make/online/id/<?= $ligne->id; ?>"
+                   title="<?= _('GLOBAL_ADMIN_ONLINE') ?>">
+                    <?= _('GLOBAL_ADMIN_ONLINE') ?>
+                </a>
+                <?php endif; ?>
+            </td>
+        </tr>
+            <?php endforeach; ?>
+        </tbody>
+    </table>
+    <?php endif; ?>
 </div>
