--- a/application/modules/back/views/scripts/index/carrousel-add.phtml
+++ b/application/modules/back/views/scripts/index/carrousel-add.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->headTitle('Carrousel | ');
+$this->headTitle(_('HEAD_TITLE_CARROUSEL') . ' | ');
 $formPageCms = $this->formPageCms;
 $this->headLink()->appendStylesheet($this->buildDesignUrl('carrousel/css/add.css'));
 ?>
