--- a/application/modules/back/views/scripts/index/login.phtml
+++ b/application/modules/back/views/scripts/index/login.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->headTitle('Connexion | ');
+$this->headTitle(_('HEAD_TITLE_CONNECTION') . ' | ');
 $formLogin = $this->formLogin;
 $this->headLink()->appendStylesheet($this->buildDesignUrl('index/css/login.css'));
 ?>
