--- a/application/modules/back/views/scripts/index/partners.phtml
+++ b/application/modules/back/views/scripts/index/partners.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->headTitle('Home | ');
+$this->headTitle(_('HEAD_TITLE_PARTNERS') . ' | ');
 $formPageCms = $this->formPageCms;
 $this->headLink()->appendStylesheet($this->buildDesignUrl('index/css/index.css'));
 ?>
