--- a/application/modules/front/layouts/scripts/layout.phtml
+++ b/application/modules/front/layouts/scripts/layout.phtml
@@ -14,10 +14,21 @@ $this->headTitle(_('GLOBAL_HEADER_TITLE'));
 $this->headMeta()->setCharset(Llv_Config::getInstance()->project->charset);
 
 /** Feuilles de style */
-$this->headLink()->appendStylesheet($this->baseUrl() . 'design/default/default/_common/css/reset.css');
-$this->headLink()->appendStylesheet($this->baseUrl() . 'design/default/default/_common/css/global.css');
-$this->headLink()->appendStylesheet($this->baseUrl() . 'design/default/' . $locale . '/_common/css/global.css');
-$this->headLink()->appendStylesheet($this->baseUrl() . 'design/' . $module . '/' . $locale . '/_common/css/global.css');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'design/' . $module . '/' . $locale . '/_common/css/global.css');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'design/' . $module . '/default/_common/css/global.css');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'design/default/' . $locale . '/_common/css/global.css');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'design/default/default/_common/css/global.css');
+
+/** JS Commun */
+$this->headScript()->appendFile($this->baseUrl() . 'design/default/default/_common/js/common.js');
+/** jQuery */
+$this->headScript()->prependFile($this->baseUrl() . 'design/default/default/_plugin/jquery.js');
+/** jQuery UI */
+$this->headScript()->appendFile($this->baseUrl() . 'design/default/default/_plugin/jquery-ui/js/jquery.ui.js');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'design/default/default/_plugin/jquery-ui/css/style.css');
+/** ShadowBox */
+$this->headScript()->appendFile($this->baseUrl() . 'design/default/default/_plugin/shadowbox/shadowbox.js');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'design/default/default/_plugin/shadowbox/shadowbox.css');
 
 ?>
 <?php echo $this->doctype(); ?>
@@ -68,6 +79,9 @@ $this->headLink()->appendStylesheet($this->baseUrl() . 'design/' . $module . '/'
         ?>
     </div>
 </div>
+<script type="text/javascript">
+    var i18n = <?= $this->giveJsI18nText();?>;
+</script>
 
 </body>
 
