Ajout de langue UI Affichage front du carrousel

--- a/application/modules/back/views/scripts/partial/footer.phtml
+++ b/application/modules/back/views/scripts/partial/footer.phtml
@@ -1,1 +1,5 @@
-Credits : <a href="http://www.aroy.fr">Alexandre ROY</a>
+<p>
+    <?= _('FOOTER_COPYRIGHT'); ?> - <?= date('Y'); ?>
+    |
+    <?= _('FOOTER_CREDITS'); ?>
+</p>
