--- a/application/modules/front/views/scripts/index/index.phtml
+++ b/application/modules/front/views/scripts/index/index.phtml
@@ -35,12 +35,12 @@ $carrousel = $this->carrousel;
         <img src="<?= $this->baseUrl()?>files/upload/news/default.jpg">
     </p>
     <h4>
-        <?= _('HOME_NEWS_TITRE_NEWS_TITRE') ?>
+        <?= _('HOME_NEWS_TITRE2') ?>
     </h4>
 
-    <p><?= _('HOME_NEWS_TITRE_NEWS_CONTENU') ?></p>
+    <p><?= _('HOME_NEWS_CONTENU') ?></p>
 
-    <p class="more"><a href="#"><?= _('HOME_NEWS_TITRE_NEWS_MORE') ?></a></p>
+    <p class="more"><a href="#"><?= _('HOME_NEWS_MORE') ?></a></p>
 </div>
 
 <div class="presentation">
@@ -54,17 +54,16 @@ $carrousel = $this->carrousel;
 
 <div class="activity">
     <h3>
-        <?= _('HOME_NEWS_TITRE') ?>
+        <?= _('HOME_ACTIVITY_TITRE') ?>
     </h3>
 
     <p class="illustrate">
         <img src="<?= $this->baseUrl()?>files/upload/news/default.jpg">
     </p>
     <h4>
-        <?= _('HOME_NEWS_TITRE_NEWS_TITRE') ?>
     </h4>
 
-    <p><?= _('HOME_NEWS_TITRE_NEWS_CONTENU') ?></p>
+    <p></p>
 
-    <p class="more"><a href="#"><?= _('HOME_NEWS_TITRE_NEWS_MORE') ?></a></p>
+    <p class="more"><a href="#"><?= _('HOME_ACTIVITY_MORE') ?></a></p>
 </div>
