--- a/application/modules/front/views/scripts/partial/footer.phtml
+++ b/application/modules/front/views/scripts/partial/footer.phtml
@@ -1,1 +1,15 @@
-footer
+<p>
+    <?= _('FOOTER_COPYRIGHT'); ?> - <?= date('Y')?>
+    |
+    <?= _('FOOTER_CREDITS'); ?>
+</p>
+
+<p>
+    <?= _('GLOBAL_COORDONNEES_ADRESSE'); ?>
+    |
+    <?= _('GLOBAL_COORDONNEES_TELEPHONE_LABEL'); ?>
+    <?= _('GLOBAL_COORDONNEES_TELEPHONE'); ?>
+    |
+    <?= _('GLOBAL_COORDONNEES_MOBILE_LABEL'); ?>
+    <?= _('GLOBAL_COORDONNEES_MOBILE'); ?>
+</p>
